git-ops/infra/argo-cd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argo-cd
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "61.77.247.3/32"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - argocd.archainia.app
      secretName: archainia-wildcard-tls

  rules:
    - host: argocd.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
